<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@null"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:background="@drawable/top_semi_circle_shape_red"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView android:gravity="center"
            android:id="@+id/tv_alert_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_tip"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bottom_semi_circle_shape_wight"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <TextView
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:id="@+id/tv_alert_content"
            android:background="@color/palette_white"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp" />
        <RelativeLayout
            android:id="@+id/rl_down_load_progress"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="0%"
                android:layout_alignParentRight="true" />
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:max="100"
                android:indeterminate="false"
                android:layout_toLeftOf="@id/tv_progress"
                android:layout_centerVertical="true" />
        </RelativeLayout>
        <ImageView
            android:background="@color/common_divide_line_color"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View android:id="@+id/view_divider"
                android:background="@color/palette_gray_light"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true" />
            <TextView android:gravity="center"
                android:id="@+id/tv_confirm"
                android:background="@color/palette_transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_confirm"
                android:layout_toRightOf="@id/view_divider"
                style="@style/Text.red.f5"/>
            <TextView android:gravity="center"
                android:id="@+id/tv_cancel"
                android:background="@color/palette_transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_cancel"
                android:layout_toLeftOf="@id/view_divider"
                style="@style/Text.gray_mid.f3"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
